create new default theme; add footer and branding partials;

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -1,5 +1,9 @@
 // header customisations
 
+.navbar {
+  margin-bottom: 0;
+}
+
 // support input appended to navbar search field
 .navbar .input-append, 
 .navbar .input-prepend {
