--- a/frontend/app/views/archival_objects/edit.html.erb
+++ b/frontend/app/views/archival_objects/edit.html.erb
@@ -35,7 +35,7 @@
       </div> <!-- btn-toolbar archives-tree-toolbar -->
     </div> <!-- well -->
    </div> <!-- span3 -->
-   <div class="span9" id="archival_object_container">
+   <div class="span9 record-pane" id="archival_object_container">
       <%= render :partial=>"archival_objects/edit_inline" %>
    </div>
 </div>
