--- a/frontend/app/views/archival_objects/show.html.erb
+++ b/frontend/app/views/archival_objects/show.html.erb
@@ -9,7 +9,7 @@
       <% end %>
       </div>
    </div>
-   <div class="span9">
+   <div class="span9 record-pane">
       <div class="btn-group" style="float: right">
         <% if @collection_tree %>
            <%= link_to "Edit", {:controller=>:archival_objects, :action=>:edit, :id=>@archival_object.id, :collection_id=>@collection_tree["collection_id"]}, :class=>"btn btn-small" %>
