--- a/frontend/app/views/collections/edit.html.erb
+++ b/frontend/app/views/collections/edit.html.erb
@@ -6,7 +6,7 @@
       <%= render :partial=>"collections/tree", :locals=>{:selected=>"collection"} %>      
     </div> <!-- well -->
    </div> <!-- span3 -->
-   <div class="span9">
+   <div class="span9 record-pane">
       <div id="object_container"></div>
    </div>
 </div>
