--- a/frontend/app/views/collections/show.html.erb
+++ b/frontend/app/views/collections/show.html.erb
@@ -5,5 +5,5 @@
       <%= render :partial=>"collections/tree", :locals=>{:selected=>"collection"} %>
     </div> <!-- well -->
    </div> <!-- span3 -->
-   <div class="span9" id="object_container"></div>
+   <div class="span9 record-pane" id="object_container"></div>
 </div>
