--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -3,7 +3,7 @@
    <div class="span3">
       <div class="well">List all subjects here for quick access.</div>
    </div>
-   <div class="span9">
+   <div class="span9 record-pane">
       <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
       <br/>
       <div class="row-fluid">
