--- a/frontend/app/assets/stylesheets/themes/default/default.less
+++ b/frontend/app/assets/stylesheets/themes/default/default.less
@@ -1,1 +1,41 @@
 @baseFontSize: 13px;
+
+body {
+  background: #e9e9e9 url(bg_body.png) repeat top left;
+}
+
+.content-pane {
+  background-color: #f9f9f9;
+  padding: 20px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+}
+
+.breadcrumb {
+  margin: -20px -20px 10px;
+  padding: 8px 20px;
+  .border-radius(0 0 4px 4px);
+  #gradient > .vertical(#e9e9e9, #f1f1f1);  
+}
+
+.record-pane {
+  box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.15) inset;
+  background-color: white;
+  margin-left: @fluidGridGutterWidth / 2;
+  *margin-left: (@fluidGridGutterWidth - (.5 / @gridRowWidth * 100 * 1%)) / 2;
+  padding: 0 @fluidGridGutterWidth / 2;
+  *padding-left: 0 (@fluidGridGutterWidth - (.5 / @gridRowWidth * 100 * 1%)) / 2;
+}
+
+.branding {
+  display: none;
+}
+
+.footer {
+  padding: 20px;
+  text-align: right;
+}
+
+.footer a {
+  color: #333;
+  text-shadow: 1px 1px 2px white;
+}
