--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -3,7 +3,7 @@
    <div class="span3">
       <div class="well">The facets/search filters will go here</div>
    </div>
-   <div class="span9">
+   <div class="span9 record-pane">
       <div class="btn-group" style="float: right">
         <%= link_to "Create Accession", {:controller=>:accessions, :action=>:new}, :class=>"btn" %>
       </div>
