--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -5,7 +5,7 @@
          <p>This is where the tree will go.</p>
       </div>
    </div>
-   <div class="span9">
+   <div class="span9 record-pane">
       <div class="btn-group" style="float: right">
         <%= link_to "Edit Accession", {:controller=>:accessions, :action=>:edit, :id=>@accession.id}, :class=>"btn" %>
         <button class="btn">Delete</button>
