--- a/frontend/app/views/collections/new.html.erb
+++ b/frontend/app/views/collections/new.html.erb
@@ -5,7 +5,7 @@
          Save your Collection to then begin modifying its hierarchy.
     </div> <!-- well -->
    </div> <!-- span3 -->
-   <div class="span9" id="archival_object_container">
+   <div class="span9 record-pane" id="archival_object_container">
       <%= form_for @collection, :as => "collection", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"collections/form_container", :locals=>{:f => f} %>
          <div class="form-actions">            
