apply new theme to index pages

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -96,3 +96,8 @@ h2 > .label {
 .input-prepend .dropdown-menu {
 	font-size: @baseFontSize;
 }
+
+.record-pane > .btn-group {
+  float: right;
+  margin-top: 10px;
+}
