--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -4,7 +4,7 @@
       <div class="well">The facets/search filters will go here</div>
    </div>
    <div class="span9 record-pane">
-      <div class="btn-group" style="float: right">
+      <div class="btn-group">
         <%= link_to "Create Accession", {:controller=>:accessions, :action=>:new}, :class=>"btn" %>
       </div>
       <h2>Accessions</h2>
