--- a/frontend/app/views/archival_objects/index.html.erb
+++ b/frontend/app/views/archival_objects/index.html.erb
@@ -3,8 +3,8 @@
    <div class="span3">
       <div class="well">The facets/search filters will go here</div>
    </div>
-   <div class="span9">
-      <div class="btn-group" style="float: right">
+   <div class="span9 record-pane">
+      <div class="btn-group">
         <%= link_to "Create Archival Object", {:controller=>:archival_objects, :action=>:new}, :class=>"btn" %>
       </div>
       <h2>Archival Objects</h2>
