--- a/frontend/app/views/collections/forms/_basic_information.html.erb
+++ b/frontend/app/views/collections/forms/_basic_information.html.erb
@@ -4,7 +4,18 @@
    <label class="control-label">Subjects</label>
    <div class="controls">
       <div class="input-append linker-wrapper">
-          <input type="text" class="linker" data-object_class="subject" data-controller="subjects" data-name="Subject" data-name_plural="Subjects" data-owner_class="collection" data-owner_attribute="subjects" data-url="<%= url_for :controller=>:subjects, :action=>:list, :format=>:json %>" data-selected='<%= @collection.subjects.blank? ? "[]" : @collection.subjects.collect {|s| Subject.from_hash(s)}.to_json %>' data-format="${display_string}" />
+        <% puts @collection.inspect %>
+          <input type="text" class="linker" 
+               data-object_class="subject" 
+               data-controller="subjects" 
+               data-name="Subject" 
+               data-name_plural="Subjects" 
+               data-owner_class="collection" 
+               data-owner_attribute="subjects" 
+               data-url="<%= url_for :controller=>:subjects, :action=>:list, :format=>:json %>" 
+               data-selected='<%= @collection['subjects'].blank? ? "[]" : @collection['resolved']['subjects'].collect {|s| Subject.from_hash(s)}.to_json %>' 
+               data-format="${display_string}" 
+          />
           <div class="btn-group">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
               <ul class="dropdown-menu">
