Removed now defunct error handling code from views

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/form_messages", :object => @accession, :errors => @errors, :warnings => @warnings %>
+<%= render "shared/form_messages", :object => @accession %>
 
 <fieldset>
    <%= f.label_field_pair :title %>
