--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -31,8 +31,8 @@
         </div>
      <% end %>
       <fieldset>
-        <%= f.label_field_pair :repo_code, f.text_field(:repo_code, :size=>10), {:errors=>@errors, :warnings=>@warnings} %>
-        <%= f.label_field_pair :description, f.text_area(:description, :rows=>3), {:errors=>@errors, :warnings=>@warnings} %>
+        <%= f.label_field_pair :repo_code, f.text_field(:repo_code, :size=>10) %>
+        <%= f.label_field_pair :description, f.text_area(:description, :rows=>3) %>
       </fieldset>
    </div>
    <div class="modal-footer">
