--- a/frontend/app/views/archival_objects/edit.html.erb
+++ b/frontend/app/views/archival_objects/edit.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row-fluid">
    <div class="span3">
-     <div class="archives-tree-container well">
+     <div class="archives-tree-container">
       <!-- <div class="archives-tree-title">Container Hierarchy</div> -->
       <%= render :partial=>"collections/tree", :locals=>{:selected=>@archival_object.id} %>
       <% if @collection_tree %>
