--- a/frontend/app/views/archival_objects/index.html.erb
+++ b/frontend/app/views/archival_objects/index.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>["Browse Archival Objects"]} %>
 <div class="row-fluid">
    <div class="span3">
-      <div class="well">The facets/search filters will go here</div>
+      The facets/search filters will go here.
    </div>
    <div class="span9 record-pane">
       <div class="btn-group">
