--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Archival Objects", :controller=>:archival_objects, :action=>:index),"New Archival Object"]} %>
 <div class="row-fluid">
    <div class="span3">
-     <div class="archives-tree-container well">
+     <div class="archives-tree-container">
       <!-- <div class="archives-tree-title">Container Hierarchy</div> -->
       <%# render :partial=>"collections/tree", :locals=>{:selected=>"new"} %>
       <div class="btn-toolbar archives-tree-toolbar">         
