--- a/frontend/app/views/collections/show.html.erb
+++ b/frontend/app/views/collections/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Collections", :controller=>:collections, :action=>:index), @collection.title]} %>
 <div class="row-fluid">
    <div class="span3">
-     <div class="archives-tree-container well">
+     <div class="archives-tree-container">
       <%= render :partial=>"collections/tree", :locals=>{:selected=>"collection"} %>
     </div> <!-- well -->
    </div> <!-- span3 -->
