--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -64,17 +64,17 @@
 }
 .user-label,
 .repository-label {
-   padding: 4px 9px;
+   padding: 5px 9px;
    display: inline-block;
    vertical-align: middle;
-   margin: 5px 0 !important;
+   margin: 6px 0 0 !important;
    .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
    .border-radius(4px 0 0 4px);
    #font > .sans-serif(13px, normal, 1);
    .navbarVerticalAlign(28px); // Vertically center in navbar
    margin-bottom: 0;
    line-height: @baseLineHeight;
-   background-color: @navbarBackground;
+   background-color: #e9e9e9;
 }
 
 .dropdown-menu {
