--- a/frontend/app/assets/stylesheets/themes/default/default.less
+++ b/frontend/app/assets/stylesheets/themes/default/default.less
@@ -13,7 +13,8 @@ body {
 .breadcrumb {
   margin: -20px -20px 10px;
   padding: 8px 20px;
-  .border-radius(0 0 4px 4px);
+  .border-radius(0);
+  border-bottom: 1px solid white;
   #gradient > .vertical(#e9e9e9, #f1f1f1);  
 }
 
