--- a/frontend/app/views/collections/_show_inline.html.erb
+++ b/frontend/app/views/collections/_show_inline.html.erb
@@ -21,6 +21,19 @@
              <span class="identifier-display-part"><%= @collection.id_0 %></span><span class="identifier-display-part"><%= @collection.id_1 %></span><span class="identifier-display-part"><%= @collection.id_2 %></span><span class="identifier-display-part"><%= @collection.id_3 %></span>
           </div>
        </div>
+       <% if @collection.subjects %>
+       <hr/>
+       <div class="row-fluid label-and-value">
+          <div class="span3">Subjects</div>
+          <div class="span9">
+             <% @collection["resolved"]["subjects"].each do | subject | %>
+                <div class="subject-token">
+                   <%= subject['term'] %>
+                </div>
+             <% end %>
+          </div>
+       </div>
+       <% end %>
     </div>
   </div>
 </div>
