--- a/frontend/app/views/collections/_tree.html.erb
+++ b/frontend/app/views/collections/_tree.html.erb
@@ -1,7 +1,5 @@
-<a href="javascript:void(0)" class="expand-tree btn btn-mini"><span class="icon-resize-full"></span></a>
-<a href="javascript:void(0)" class="retract-tree btn btn-mini"><span class="icon-resize-small"></span></a>
-<div id="archives_tree" class="archives-tree" data-collection-id="<%= @collection_tree['collection_id'] %>"></div>
 <div id="archives_tree_toolbar"></div>
+<div id="archives_tree" class="archives-tree" data-collection-id="<%= @collection_tree['collection_id'] %>"></div>
 
 <script>
    AS.tree_data["collection-id-<%= @collection_tree['collection_id'] %>"] = <%= @collection_tree.to_json.html_safe %>;
@@ -34,14 +32,21 @@
 --></div>
 
 <div id="tree_toolbar_template"><!--
-   <div class="btn-toolbar">         
-     
-   </div>
+  <div class="btn-toolbar">
+    <div class="btn-group">
+      <div class="btn-group expand-tree">
+        <a href="javascript:void(0)" class="btn btn-mini"><span class="icon-resize-full"></span></a>
+      </div>
+      <div class="btn-group retract-tree">
+        <a href="javascript:void(0)" class="btn btn-mini"><span class="icon-resize-small"></span></a>
+      </div>
+    </div>
+  </div>
 --></div>
 
 <div id="tree_toolbar_addchild_template"><!--
-   <div class="btn-group dropup">
-    <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+   <div class="btn-group dropdown">
+    <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#" title="Add Child">
       Add Child
       <span class="caret"></span>
     </a>
@@ -56,9 +61,9 @@
 --></div>
 
 <div id="tree_toolbar_addsibling_template"><!--
-    <div class="btn-group dropup">
-     <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
-       Add Sibling
+    <div class="btn-group dropdown">
+     <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#" title="Add Sibling">
+       +1
        <span class="caret"></span>
      </a>
      <ul class="dropdown-menu">
@@ -72,20 +77,16 @@
 --></div>
 
 <div id="tree_nodenavigation_toolbar_template"><!--
-   <div class="tree-navigation btn-toolbar">
-      <div class="btn-group">
-         {if defined('previous')}
-            <a href="#${previous}" class="btn btn-small"><span class="icon-arrow-left"></span></a>
-         {else}
-            <a disabled="disabled" class="btn btn-small"><span class="icon-arrow-left"></span></a>
-         {/if}
-      </div>
-      <div class="btn-group">
-         {if defined('next')}
-            <a href="#${next}" class="btn btn-small"><span class="icon-arrow-right"></span></a>
-         {else}
-            <a disabled="disabled" class="btn btn-small"><span class="icon-arrow-right"></span></a>
-         {/if}
-      </div>
-   </div>
+  <div class="btn-group">
+    {if defined('previous')}
+      <a href="#${previous}" class="btn btn-mini"><span class="icon-arrow-left"></span></a>
+    {else}
+      <a disabled="disabled" class="btn btn-mini"><span class="icon-arrow-left"></span></a>
+    {/if}
+    {if defined('next')}
+      <a href="#${next}" class="btn btn-mini"><span class="icon-arrow-right"></span></a>
+    {else}
+      <a disabled="disabled" class="btn btn-mini"><span class="icon-arrow-right"></span></a>
+    {/if}
+  </div>
 --></div>
