--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -1,8 +1,6 @@
 <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Subjects", :controller=>:subjects, :action=>:index), link_to(@subject.display_string, :controller=>:subjects,:action=>:show, :id=>@subject.id), "Edit"]} %>
 <div class="row-fluid">
-   <div class="span3">
-      <div class="well"></div>
-   </div>
+   <div class="span3"></div>
    <div class="span9">
       <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
       <br/>
