--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Subjects", :controller=>:subjects, :action=>:index), @subject.display_string]} %>
 <div class="row-fluid">
    <div class="span3">
-      <div class="well">List all subjects here for quick access.</div>
+      List all subjects here for quick access.
    </div>
    <div class="span9 record-pane">
       <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
