fix retract/expand tree state upon changing nodes in expanded mode; add onbeforeunload event handler to catch if form_changed;

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -72,9 +72,17 @@
      .opacity(95);
      z-index: 1000;
      background-color: #f9f9f9;
+
+     .expand-tree {
+       display:none;
+     }
+
+     .retract-tree {
+       display: inline;
+     }
 }
 
 .tree-navigation {
    float: right;
-   margin: 0 0 0 4px;   
+   margin: 0 0 0 4px;
 }
