--- a/frontend/app/assets/javascripts/collections.crud.js.erb
+++ b/frontend/app/assets/javascripts/collections.crud.js.erb
@@ -242,10 +242,7 @@ $(function() {
           $(".archives-tree-container").addClass("expanded");
           $(".archives-tree-container").animate({
               width: $(".archives-tree-container").parents(".container:first").width()-5
-          }, 500, function() {
-              $(".expand-tree", ".archives-tree-container").hide();
-              $(".retract-tree", ".archives-tree-container").css("display","inline");
-          });
+          }, 500);
       });
       
       $(".archives-tree-container").on("click", ".retract-tree .btn", function() {
@@ -254,12 +251,15 @@ $(function() {
           }, 500, function() {
               $(".archives-tree-container").removeClass("expanded");
               $(".archives-tree-container").css("width", "auto");
-              $(".retract-tree", ".archives-tree-container").hide();
-              $(".expand-tree", ".archives-tree-container").css("display","inline");
           });
       });
-      
+
       $(window).hashchange(onHashChange);
+      $(window).bind("beforeunload", function(event) {
+         if (form_changed) {        
+            return 'Please note you have some unsaved changes.';
+         }
+      });
    };
 
    var confirmChanges = function(targetNodeEl) {
