--- a/frontend/app/assets/javascripts/collections.show.js.erb
+++ b/frontend/app/assets/javascripts/collections.show.js.erb
@@ -59,24 +59,19 @@ $(function() {
    };
 
    var addEventBindings = function() {
-       $(".expand-tree", ".archives-tree-container").on("click", function() {
+       $(".archives-tree-container").on("click", ".expand-tree .btn", function() {
            $(".archives-tree-container").addClass("expanded");
            $(".archives-tree-container").animate({
                width: $(".archives-tree-container").parents(".container:first").width()-5
-           }, 500, function() {
-               $(".expand-tree", ".archives-tree-container").hide();
-               $(".retract-tree", ".archives-tree-container").show();
-           });
+           }, 500);
        });
 
-       $(".retract-tree", ".archives-tree-container").on("click", function() {
+       $(".archives-tree-container").on("click", ".retract-tree .btn", function() {
            $(".archives-tree-container").animate({
                width: $(".archives-tree-container").parent().width()
            }, 500, function() {
                $(".archives-tree-container").removeClass("expanded");
                $(".archives-tree-container").css("width", "auto");
-               $(".retract-tree", ".archives-tree-container").hide();
-               $(".expand-tree", ".archives-tree-container").show();
            });
        });
 
