--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -56,6 +56,7 @@ ul.token-input-disabled li.token-input-token span {
   cursor: default;
 }
 
+.token,
 li.token-input-token {
     overflow: hidden; 
     height: auto !important; 
@@ -67,6 +68,12 @@ li.token-input-token {
     color: #555;
     display: block;
     .border-radius(@inputBorderRadius);
+}
+
+.token {
+  width: auto;
+  display: inline;
+  padding: 2px 5px;
 }
 
 li.token-input-token p {
