--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -61,7 +61,7 @@
        background-position: -456px -24px !important;
      }
   
-     .collection > a > .jstree-icon {
+     .resource > a > .jstree-icon {
        background-position: -264px -24px !important;
      }
    }
