--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -27,5 +27,5 @@
   </div>
 </div>
 <%= f.hidden_field :parent %>
-<%= f.hidden_field :collection %>
+<%= f.hidden_field :resource %>
 <%= hidden_field_tag "ao_id", @archival_object.id %>
