--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -1,6 +1,6 @@
 <div class="btn-group" style="float: right">
-   <% if @collection_id %>
-      <%= link_to "Edit", {:controller=>:collections, :action=>:edit, :id=>@collection_id, :anchor=>"archival_object_#{@archival_object.id}"}, :class=>"btn btn-small" %>
+   <% if @resource_id %>
+      <%= link_to "Edit", {:controller=>:resources, :action=>:edit, :id=>@resource_id, :anchor=>"archival_object_#{@archival_object.id}"}, :class=>"btn btn-small" %>
    <% end %>
 </div>
 
