--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -8,10 +8,10 @@ $(function() {
     var form_changed = false,
         $tree = $("#archives_tree"),
         $container = $("#object_container"),
-        collection_tree_data = AS.tree_data["collection-id-" + $(".archives-tree").data("collection-id")];
+        resource_tree_data = AS.tree_data["resource-id-" + $(".archives-tree").data("resource-id")];
 
     var renderTree = function() {
-        $tree.html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));
+        $tree.html(AS.renderTemplate("tree_template", {tree: resource_tree_data}));
      }
 
     var rerenderTree = function(callback) {
@@ -21,8 +21,8 @@ $(function() {
            selected_node_id = "archival_object_" + $("#ao_id", $container).val();
         }
 
-        $.getJSON(APP_PATH + "collections/" + collection_tree_data.collection_id + "/tree", function(json) {
-            collection_tree_data = json;
+        $.getJSON(APP_PATH + "resources/" + resource_tree_data.resource_id + "/tree", function(json) {
+            resource_tree_data = json;
 
             renderTree();
 
@@ -38,7 +38,7 @@ $(function() {
       var $form = $("form", $container);
 
       $(".btn-cancel", $form).html("Revert Changes")
-      $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "collections/" + collection_tree_data.collection_id + location.hash + "'>Finish Editing</a>");
+      $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "resources/" + resource_tree_data.resource_id + location.hash + "'>Finish Editing</a>");
 
       if (location.hash !== "#newAO") {
          $(".btn-primary", $form).attr("disabled", "disabled");
@@ -54,8 +54,8 @@ $(function() {
       $("#createPlusOne", $form).click(function() {
          var createPlusOne = function(event, data) {
             if (data.success) {
-               // if parent is a collection add +1 as a child
-               if ($(".selected", $tree).parents("li:first").hasClass("collection")) {
+               // if parent is a resource add +1 as a child
+               if ($(".selected", $tree).parents("li:first").hasClass("resource")) {
                   $(".archives-tree-container .add-child-archival-object-analog").trigger("click");
                } else {
                   // else add +1 as a sibling
@@ -105,7 +105,7 @@ $(function() {
          if (nodeEl.attr("id") === "newAO") {
             
             var data = {
-               collection: collection_tree_data.collection_id,
+               resource: resource_tree_data.resource_id,
                inline: true
             };
 
@@ -133,9 +133,9 @@ $(function() {
                     initForm(html);
                 }
             });
-        } else if (nodeEl.attr("rel") === "collection") {         
+        } else if (nodeEl.attr("rel") === "resource") {         
              $.ajax({
-                url: APP_PATH+"collections/"+nodeEl.data("id")+"/edit?inline=true",
+                url: APP_PATH+"resources/"+nodeEl.data("id")+"/edit?inline=true",
                 success: function(html) {
                     initForm(html);
                 }
@@ -165,9 +165,9 @@ $(function() {
       // render tree toolbar
       $("#archives_tree_toolbar").html(AS.renderTemplate("tree_toolbar_template"));
       renderTreeNodeNavigation();
-      if ((nodeEl.hasClass("collection") && nodeEl.find("> ul > li").length === 0) || nodeEl.attr("id") != "newAO") {
+      if ((nodeEl.hasClass("resource") && nodeEl.find("> ul > li").length === 0) || nodeEl.attr("id") != "newAO") {
          $(".btn-toolbar > .btn-group:first", "#archives_tree_toolbar").append(AS.renderTemplate("tree_toolbar_addchild_template"));
-         if (!nodeEl.hasClass("collection") && !nodeEl.parents("li:first").hasClass("collection")) {
+         if (!nodeEl.hasClass("resource") && !nodeEl.parents("li:first").hasClass("resource")) {
             $(".btn-toolbar > .btn-group:first", "#archives_tree_toolbar").append(AS.renderTemplate("tree_toolbar_addsibling_template"));
          }
       }
@@ -314,12 +314,12 @@ $(function() {
              "move" : {
                  "check_move" : function (m) {
 
-                     // can't move collection
-                     if ($(m.o[0]).hasClass("collection")) {
+                     // can't move resource
+                     if ($(m.o[0]).hasClass("resource")) {
                        return false;
                      }                     
-                     // can't into collection
-                     if ($(m.np[0]).hasClass("collection")) {
+                     // can't into resource
+                     if ($(m.np[0]).hasClass("resource")) {
                         return false
                      }
                      
@@ -393,7 +393,7 @@ $(function() {
              };
              
              $.ajax({
-                url: APP_PATH+"collections/"+collection_tree_data.collection_id+"/update_tree",
+                url: APP_PATH+"resources/"+resource_tree_data.resource_id+"/update_tree",
                 type: "POST",
                 data: {
                    tree: JSON.stringify(parseTree($tree.find("li[rel=archival_object]:first")))
