--- a/frontend/app/views/archival_objects/edit.html.erb
+++ b/frontend/app/views/archival_objects/edit.html.erb
@@ -1,5 +1,5 @@
-<% if @collection_tree %>
-   <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to(@collection_tree['title'], :controller=>:collections, :action=>controller.action_name, :id=>@collection_tree['collection_id']), @archival_object.title]} %>
+<% if @resource_tree %>
+   <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to(@resource_tree['title'], :controller=>:resources, :action=>controller.action_name, :id=>@resource_tree['resource_id']), @archival_object.title]} %>
 <% else %>
    <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Archival Objects", :controller=>:archival_objects, :action=>:index), @archival_object.title]} %>
 <% end %>
@@ -8,8 +8,8 @@
    <div class="span3">
      <div class="archives-tree-container">
       <!-- <div class="archives-tree-title">Container Hierarchy</div> -->
-      <%= render :partial=>"collections/tree", :locals=>{:selected=>@archival_object.id} %>
-      <% if @collection_tree %>
+      <%= render :partial=>"resources/tree", :locals=>{:selected=>@archival_object.id} %>
+      <% if @resource_tree %>
          <div class="btn-toolbar archives-tree-toolbar">
            <div class="btn-group dropup">
              <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
@@ -17,7 +17,7 @@
                <span class="caret"></span>
              </a>
              <ul class="dropdown-menu">
-               <li><%= link_to "<span class='icon-file'></span> Analog Object".html_safe, :controller=>:archival_objects, :action=>:new, :collection_id=>@collection_tree['collection_id'], :parent_id=>@archival_object.id %></li>
+               <li><%= link_to "<span class='icon-file'></span> Analog Object".html_safe, :controller=>:archival_objects, :action=>:new, :resource_id=>@resource_tree['resource_id'], :parent_id=>@archival_object.id %></li>
              </ul>
            </div> <!-- btn-group dropup -->
            <% if @parent_id %>
@@ -27,7 +27,7 @@
                <span class="caret"></span>
              </a>
              <ul class="dropdown-menu">
-               <li><%= link_to "<span class='icon-file'></span> Analog Object".html_safe, :controller=>:archival_objects, :action=>:new, :collection_id=>@collection_tree['collection_id'], :parent_id=>@parent_id %></li>
+               <li><%= link_to "<span class='icon-file'></span> Analog Object".html_safe, :controller=>:archival_objects, :action=>:new, :resource_id=>@resource_tree['resource_id'], :parent_id=>@parent_id %></li>
              </ul>
            </div> <!-- btn-group dropup -->
            <% end %>
