--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -3,9 +3,9 @@
    <div class="span3">
      <div class="archives-tree-container">
       <!-- <div class="archives-tree-title">Container Hierarchy</div> -->
-      <%# render :partial=>"collections/tree", :locals=>{:selected=>"new"} %>
+      <%# render :partial=>"resources/tree", :locals=>{:selected=>"new"} %>
       <div class="btn-toolbar archives-tree-toolbar">         
-        <!-- <div class="btn-group"><a class="btn btn-mini" href="#">Link to a Collection</a></div>-->
+        <!-- <div class="btn-group"><a class="btn btn-mini" href="#">Link to a Resource</a></div>-->
       </div> <!-- btn-toolbar archives-tree-toolbar -->
     </div> <!-- well -->
    </div> <!-- span3 -->
