--- a/frontend/app/views/resources/_tree.html.erb
+++ b/frontend/app/views/resources/_tree.html.erb
@@ -1,8 +1,8 @@
 <div id="archives_tree_toolbar"></div>
-<div id="archives_tree" class="archives-tree" data-collection-id="<%= @collection_tree['collection_id'] %>"></div>
+<div id="archives_tree" class="archives-tree" data-resource-id="<%= @resource_tree['resource_id'] %>"></div>
 
 <script>
-   AS.tree_data["collection-id-<%= @collection_tree['collection_id'] %>"] = <%= @collection_tree.to_json.html_safe %>;
+   AS.tree_data["resource-id-<%= @resource_tree['resource_id'] %>"] = <%= @resource_tree.to_json.html_safe %>;
 </script>
 
 <div id="tree_template"><!--
@@ -19,15 +19,15 @@
       {/if}
    {/macro}
    
-   {macro render_collection(node)}
-      <li id="collection_${node.collection_id}" class="collection" rel="collection" data-id="${node.collection_id}">
-         <a href="#collection_${node.collection_id}" title="${AS.encodeForAttribute(node.title)}">${node.title}</a>
+   {macro render_resource(node)}
+      <li id="resource_${node.resource_id}" class="resource" rel="resource" data-id="${node.resource_id}">
+         <a href="#resource_${node.resource_id}" title="${AS.encodeForAttribute(node.title)}">${node.title}</a>
          ${render_children(tree.children)}
       </li>
    {/macro}
    
    <ul class="jstree-classic">
-      ${render_collection(tree)}
+      ${render_resource(tree)}
    </ul>
 --></div>
 
