--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -1,14 +1,14 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>["Browse Collections"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>["Browse Resources"]} %>
 <div class="row-fluid">
    <div class="span3">
       The facets/search filters will go here.
    </div>
    <div class="span9 record-pane">
       <div class="btn-group">
-        <%= link_to "Create Collection", {:controller=>:collections, :action=>:new}, :class=>"btn" %>
+        <%= link_to "Create Resource", {:controller=>:resources, :action=>:new}, :class=>"btn" %>
       </div>
-      <% if not @collections.blank? %>
-         <h2>Collections</h2>
+      <% if not @resources.blank? %>
+         <h2>Resources</h2>
          <table class="table table-striped table-bordered table-condensed">
            <thead>
              <tr>
@@ -17,13 +17,13 @@
              </tr>
            </thead>
            <tbody>
-            <% @collections.each do |collection| %>
+            <% @resources.each do |resource| %>
                <tr>
-                <td><%= collection.title %></td>
+                <td><%= resource.title %></td>
                 <td>
                    <div class="btn-group" style="float: right">
-                     <%= link_to "View", {:controller=>:collections, :action=>:show, :id=>collection.id}, :class=>"btn btn-mini" %>
-                     <%= link_to "Edit", {:controller=>:collections, :action=>:edit, :id=>collection.id}, :class=>"btn btn-mini" %>
+                     <%= link_to "View", {:controller=>:resources, :action=>:show, :id=>resource.id}, :class=>"btn btn-mini" %>
+                     <%= link_to "Edit", {:controller=>:resources, :action=>:edit, :id=>resource.id}, :class=>"btn btn-mini" %>
                    </div>
                 </td>
               </tr>
@@ -32,7 +32,7 @@
          </table>
       <% else %>
          <p class="alert alert-info">
-            There are currently no Collections in this, <strong><%= session[:repo] %></strong>, repository.
+            There are currently no Resources in this, <strong><%= session[:repo] %></strong>, repository.
          </p>
       <% end %>
    </div>
