--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Accessions", :controller=>:accessions, :action=>:index %></li>
-                <li><%= link_to "Collections", :controller=>:collections, :action=>:index %></li>
+                <li><%= link_to "Resources", :controller=>:resources, :action=>:index %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Subjects", :controller=>:subjects, :action=>:index %></li>                
               </ul>
@@ -26,7 +26,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Accession", :controller=>:accessions, :action=>:new %></li>
-                <li><%= link_to "Collection", :controller=>:collections, :action=>:new %></li>
+                <li><%= link_to "Resource", :controller=>:resources, :action=>:new %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Subject", :controller=>:subjects, :action=>:new %></li>
               </ul>
