Added code coverage generation for frontend.  Use:
  build/run frontend:coverage

--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -12,7 +12,7 @@
    </div>
    <div class="modal-footer">
       <input class="btn btn-primary" type="submit" name="commit" value="Create Repository" />
-      <button class="btn" data-dismiss="modal">Cancel</button>
+      <button class="btn btn-cancel" data-dismiss="modal">Cancel</button>
    </div>
 <% end %>
 <script>
