Fix reference to Collection - rename to Resource

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -20,7 +20,7 @@
            <div id="resource_link_defer" class="accordion-body collapse">
              <div class="accordion-inner">
                 <div class="alert alert-info">
-                  Create this Accession without a Collecion.  You can create that link later.
+                  Create this Accession without a Resource.  You can create that link later.
                 </div>
              </div>
            </div>
