--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     var APP_PATH = "<%= root_path %>";
   </script>
 </head>
-<body>
+<body data-spy="scroll" data-target="#archivesSpaceSidebar" data-offset="20">
 
    <header>
      <%= render "shared/header" %>
