--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -1,17 +1,20 @@
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Agents", :controller => :agents, :action => :index),"New #{I18n.t("agent.#{@agent['type']}")}"]} %>
+<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Agents", :controller => :agents, :action => :index),"New #{I18n.t("agent.#{@agent.agent_type}")}"]} %>
 <div class="row-fluid">
-  <div class="span3">
-    <ul class="nav nav-list affix as-nav-list" data-spy="affix" data-offset-top="50">
+  <div class="span3" id="archivesSpaceSidebar">
+    <ul class="nav nav-list affix as-nav-list" data-spy="affix">
       <li><a href="#agent_details">Agent Details <span class="icon-chevron-right"></span></a></li>
       <li><a href="#primary_name">Primary Name <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#secondary_names">Secondary Name(s) <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#contacts">Contact Details <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#relationships">Relationships <span class="icon-chevron-right"></span></a></li>
     </ul>
   </div>
   <div class="span9 record-pane">
-    <h2><%= "New #{I18n.t("agent.#{@agent['type']}")}" %>  <span class="label label-info">Agent</span></h2>
-    <%= form_for @agent, :as => "agent", :url => {:action => :create, :type => @agent["type"]}, :html => {:class => 'form-horizontal'} do |f| %>
+    <h2><%= "New #{I18n.t("agent.#{@agent.agent_type}")}" %>  <span class="label label-info">Agent</span></h2>
+    <%= form_for @agent, :as => "agent", :url => {:action => :create, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
        <%= render :partial => "agents/form", :locals => {:f => f} %>
        <div class="form-actions">            
-          <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent['type']}") %></button>   
+          <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent.agent_type}") %></button>   
           <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
        </div>
     <% end %>
