Upgrade twitter bootstrap to 2.1.1; add keyboard navigation to the nav bar submenus;

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -54,6 +54,10 @@
 .user-container,
 .repository-container {
   margin-left: 10px;
+  
+  .dropdown-toggle {
+    margin-top: 5px !important;
+  }
 }
 .user-label > span,
 .repository > span {
@@ -67,7 +71,7 @@
   padding: 5px 9px;
   display: inline-block;
   vertical-align: middle;
-  margin: 6px 0 0 !important;
+  margin: 5px 0 0 !important;
   .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
   .border-radius(4px 0 0 4px);
   #font > .sans-serif(13px, normal, 1);
