WIP refactoring form helper to not use the rails form helpers

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -9,6 +9,16 @@
   margin-top: 5px;
 }
 
+.control-group {
+  margin: 0 !important;
+  padding: 4px 0;
+}
+
+.control-group.active {
+  border-radius: 4px;
+  background-color: #f3f9ff;
+}
+
 .control-group .controls.label-only {
   line-height: 30px;
 }
