--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -1,16 +1,3 @@
-<%= f.label_field_pair :authority_id %>
-<%= f.label_field_pair :prefix %>
-<%= f.label_field_pair :title %>
-<%= f.label_field_pair :primary_name %>
-<%= f.label_field_pair :rest_of_name %>
-<%= f.label_field_pair :suffix %>
-<%= f.label_field_pair :fuller_form %>
-<%= f.label_field_pair :number %>
-<%= f.label_field_pair :dates %>
-<hr/>
-<%= f.label_field_pair :qualifier %>
-<%= f.label_field_pair :sort_name %>
-<hr/>
-<%= f.label_field_pair :description_type %>
-<%= f.label_field_pair :description_note %>
-<%= f.label_field_pair :description_citation %>
+<div class="agent-name-fields">
+  <%= jsonmodel_label_and_field name, :authority_id, "agent[names][]" %>
+</div>
