--- a/frontend/app/views/agents/name_forms/_secondary_name_form.html.erb
+++ b/frontend/app/views/agents/name_forms/_secondary_name_form.html.erb
@@ -4,6 +4,6 @@
     <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
   </h4>
   <div class="subform-container">
-    <%= render :partial => "agents/name_forms/#{agent_type}" %>
+    <%= render :partial => "agents/name_forms/#{name.agent_type}", :locals=>{:f=>f} %>
   </div>
 </div>
